--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Resume</title>
-    <link rel="icon" href="images\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
